make images align in the center (E+L_style.css) fixed encoding issue (ÖÜÄ like characters were not encoded properly, html file could not be created)

--- a/create_report/files/E+L_style.css
+++ b/create_report/files/E+L_style.css
@@ -223,6 +223,7 @@ figcaption {
   font-size: 0.8em;
   font-style: italic;
   margin: 0 0 .8em;
+  text-align: center;
 }
 
 header img {
